# shift-left-tooling

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  lefthook.yml  plan-shiftLeftTooling.prompt.md  pyproject.toml  pytest.ini  requirements.txt  test_validators.py
.github/workflows/: build-and-publish.yml  pr-tests.yml
.lefthook/commit-msg/: jira-link-check  jira-link-check.sh
.lefthook/pre-commit/: enforce-naming  enforce-naming.sh
.lefthook/pre-push/: enforce-protected-branches  enforce-protected-branches.sh
docs/: DEVELOPMENT.md  INTEGRATIONS.md
lib/: __init__.py  config.py  git_utils.py  github_provider.py  jira_provider.py
scripts/: __init__.py  enforce_protected_branches.py  generate_changelog.py  get_protected_branches.py  validate_branch_name.py  validate_branch_naming.py  validate_jira_commit_link.py  validate_json.py  validate_yaml.py
tests/: __init__.py  test_config.py  test_git_utils.py  test_github_provider.py  test_jira_provider.py  test_scripts.py  test_validate_json.py  test_validate_yaml.py
